--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy to Azure
+name: Build and Deploy to Docker Hub
 
 on:
   pull_request:
@@ -20,7 +20,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '6.0' # أو الإصدار الذي تستخدمه
+          dotnet-version: '8.0' # أو الإصدار الذي تستخدمه
 
       - name: Restore Dependencies
         run: dotnet restore
@@ -32,10 +32,10 @@ jobs:
         run: dotnet test --configuration Release --no-build --verbosity normal
 
   deploy:
-    name: Build & Deploy to Azure
+    name: Build & Deploy to Docker Hub
     runs-on: ubuntu-latest
     needs: build  # لا يتم تنفيذ هذا إلا بعد نجاح `build`
-    if: github.ref == 'refs/heads/main'  # تشغيل هذا فقط عند `push` إلى `main`
+    if: github.ref == 'refs/heads/main' 
 
     steps:
       - name: Checkout Repository
@@ -49,14 +49,3 @@ jobs:
 
       - name: Push Docker Image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/my-dotnet-app:${{ github.sha }}
-
-      - name: Log in to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Deploy to Azure Web App
-        run: |
-          az webapp config container set --name my-app-name \
-            --resource-group my-resource-group \
-            --docker-custom-image-name ${{ secrets.DOCKER_USERNAME }}/my-dotnet-app:${{ github.sha }}
