--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,51 +1,64 @@
-name: Build and Deploy to Docker Hub
+name: CI/CD Pipeline
 
 on:
   pull_request:
-    branches:
-      - development  # تشغيل الاختبارات عند PR إلى development
+    branches: [development]
   push:
-    branches:
-      - main  # تنفيذ CI/CD عند الدمج إلى main
+    branches: [main]
+
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+  IMAGE_NAME: my-app
 
 jobs:
-  build:
+  build-test:
     name: Build and Test
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'pull_request'
+    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0' # أو الإصدار الذي تستخدمه
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0'
 
-      - name: Restore Dependencies
-        run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore
 
-      - name: Build Project
-        run: dotnet build --configuration Release --no-restore
+    - name: Build project
+      run: dotnet build --configuration Release --no-restore
 
-      - name: Run Tests
-        run: dotnet test --configuration Release --no-build --verbosity normal
+    - name: Run tests
+      run: dotnet test --configuration Release --no-build --verbosity normal
 
-  deploy:
-    name: Build & Deploy to Docker Hub
+  deploy-prod:
+    name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: build  # لا يتم تنفيذ هذا إلا بعد نجاح `build`
-    if: github.ref == 'refs/heads/main'  
-
+    needs: [build-test]
+    if: github.ref == 'refs/heads/main'
+    
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/my-dotnet-app:${{ github.sha }} .
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/my-app:latest
+          ${{ secrets.DOCKER_USERNAME }}/my-app:${{ github.sha }}
 
-      - name: Push Docker Image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/my-dotnet-app:${{ github.sha }}
+    - name: Deploy to Production
+      run: |
+        docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
